[package]
name = "libraries"
version = "0.1.0"
edition = "2024"


[dependencies]
uint = { version = "0.10.0", features = ["std"] }
rand = "0.9.1"
cipher = "0.4"
smallvec ="1.15.0"
camellia = "0.1.0"
speck = "1.1.0"
lea = "0.5.4"
serpent ="0.5.1"
aria ="0.1.0"
cast6 ="0.1.0"
cast5 ="0.11.1"
rc5core ={path ="./rc5core"}
rayon ="1.11.0"
