[package]
name = "rc5core"
version = "0.1.0-pre"
description = "RC5 block cipher"
authors = ["RustCrypto Developers"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "rc5", "block-cipher"]
categories = ["cryptography"]

[dependencies]
cipher = { git = "https://github.com/RustCrypto/traits/"}
rand ="0.9.1"

[dev-dependencies]
cipher = { git = "https://github.com/RustCrypto/traits/",features = ["dev"] }

hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
